// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427ArtifactHash4E4E463E": Object {
      "Description": "Artifact hash for asset \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3Bucket3C21ED75": Object {
      "Description": "S3 bucket for asset \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F": Object {
      "Description": "S3 key for asset version \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3Bucket3C21ED75",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "Repository22E53BBD",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
  },
}
`;

exports[`onOverridden 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427ArtifactHash4E4E463E": Object {
      "Description": "Artifact hash for asset \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3Bucket3C21ED75": Object {
      "Description": "S3 bucket for asset \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
    "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F": Object {
      "Description": "S3 key for asset version \\"549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3Bucket3C21ED75",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters549cbe0d60ad3c227c98ac490f962a33454b5377a7666d9088d23793faa2f427S3VersionKeyCF6A416F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "Repository22E53BBD",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryoverridden5BAF2C46": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestApprovalRuleOverridden",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicPolicyA1747468": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "TopicBFC7AF6E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
}
`;
